# sczr_server

./: README.md  docker-compose.yml
sczr_api/: Dockerfile  pyproject.toml
sczr_api/sczr_api/: main.py
sczr_api/tests/: test_sczr_api.py
