[tool.poetry]
name = "sczr_api"
version = "0.1.0"
description = ""
authors = ["Michał Rokita <mrokita@mrokita.pl>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.62.0"
loguru = "^0.5.3"
aioredis = "^1.3.1"
orjson = "^3.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
